Added Load Schedule function
