# src/controller/booking.controller.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const axios = require("axios");
 const auth = require("../middleware/auth");
-const { createBooking, cancelBooking, viewBooking } = require("../service/booking.service");
+const { createBooking, cancelBooking, viewBooking, insertSchedule } = require("../service/booking.service");
 
 router.post("/", auth, (req, res) => {
   getUserInfo(res, (error, result) => {
@@ -43,11 +43,9 @@ router.put("/", auth, (req, res) => {
   });
 })
 //View Bookings by Clinic Admin/Clinic User of their clinic on a particular date
-router.get("/:date", (req, res) => {
-  console.log(`View Booking: ${JSON.stringify(req.params.date)}`);
+router.get("/:date", auth,(req, res) => {
   getUserInfo(res, (error, result) => {
     if (result) {
-      console.log(`UserInfo:${JSON.stringify(result.data)}`);
       const userInfo = result.data;
       viewBooking(req.query, req.params, userInfo, (error, result) => {
         if (result) {
@@ -63,6 +61,34 @@ router.get("/:date", (req, res) => {
     }
   })
 });
+
+router.post("/createSchedule/:clinic_id/:doctor_id/:load_date", (req, res) => {
+  getSchedule(req.params, (error, result) => {
+    if (result) {
+      var result_string = JSON.stringify(result.data);
+      insertSchedule(req.params, result.data, (error, result) => {
+        if (result) {
+          res.status(200).send(result);
+        }
+        else {
+          res.status(400).send(error);
+        }
+      })
+    } else {
+      console.log(`Error:${error}`);
+
+    }
+
+  })
+})
+
+function getSchedule({ clinic_id, doctor_id }, callback) {
+  axios.get(`${process.env.CLINICSERVICE_URL}/clinic/schedule/${clinic_id}/${doctor_id}`).then((response) => {
+    callback(null, response);
+  }).catch((error) => {
+    callback(error);
+  })
+}
 
 function getUserInfo(res, callback) {
   const token = res.getHeader("x-access-token");
